--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "modern-normalize": "^2.0.0",
+    "rc-picker": "^3.12.0",
+    "rc-time-picker": "^3.7.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-time-picker": "^6.5.0",
+    "sassy-datepicker": "^0.10.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
