--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-time-picker": "^6.5.0",
+    "react-use": "^17.4.0",
     "redux-persist": "^6.0.0",
     "sassy-datepicker": "^0.10.2",
     "web-vitals": "^2.1.4"
