--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cloudinary-react": "^1.8.1",
     "modern-normalize": "^2.0.0",
+    "nanoid": "^4.0.2",
     "rc-picker": "^3.12.0",
     "rc-time-picker": "^3.7.3",
     "react": "^18.2.0",
